Major Fix for Responsive Navigation Menu Creating Empty Space & Widgets Z-Index and Animation

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -63,7 +63,7 @@
     position: fixed;
     bottom: 0px;
     left: 20px;
-    z-index: 999;
+    z-index: 100;
 }
 
 ::ng-deep .sakana-widget-ctrl {
@@ -79,7 +79,7 @@
     position: fixed;
     bottom: 50px;
     right: 10px;
-    z-index: 9999;
+    z-index: 100;
     gap: 7px;
 
     .contact-widget-container, .backtotop-container, .background-widget-container {
